# cpg-pulse

./: README.md
optimizer/PSO-CPG/: CMakeLists.txt  corr.cpp  findcxx.py  test.cpp
optimizer/PSO-CPG-Corr/: CMakeLists.txt  bench.cpp  corr.cpp  test.cpp
optimizer/PSO-CPG-Corr/Src/: Correlation.cpp  Correlation.h  Fitness.cpp  Fitness.h  Gaussian.h  Main.cpp  Matsuoka.h  PSO.cpp  PSO.h  Queue.cpp  Queue.h  Rk4.cpp  Rk4.h
optimizer/PSO-CPG/Src/: Fitness.cpp  Fitness.h  Gaussian.h  Main.cpp  Matsuoka.cpp  Matsuoka.h  PSO.cpp  PSO.h  Queue.cpp  Queue.h  Rk4.cpp  Rk4.h
sim-railbot-pulse/controllers/cpg_ds/: Makefile  cpg_ds  findcxx.py
sim-railbot-pulse/controllers/cpg_ds/Logs/: ds.txt
sim-railbot-pulse/controllers/cpg_ds/Src/: Nao.cpp  Nao.h  cpg_ds.cpp
sim-railbot-pulse/controllers/cpg_ds/Src/Modules/Motion/: config.h
sim-railbot-pulse/controllers/cpg_ds/Src/Modules/Optimizer/: FitnessProvider.cpp  FitnessProvider.h  PSO.cpp
sim-railbot-pulse/controllers/cpg_ds/Src/Modules/Sensing/: ZMPDataProvider.cpp
sim-railbot-pulse/controllers/cpg_ds/Src/Representations/Infrastructure/: FrameInfo.h
sim-railbot-pulse/controllers/cpg_ds/Src/Representations/PSO/: CPGGeneratorOutput.h  Fitness.h
sim-railbot-pulse/controllers/cpg_ds/Src/Representations/Sensing/: ContactForce.h  GroundContactState.h  PoGData.h  ZMPData.h
sim-railbot-pulse/controllers/cpg_ds/Src/Tools/Module/: Blackboard.cpp  Blackboard.h  DebugDraw.cpp  DebugDraw.h  (+2 more)
sim-railbot-pulse/controllers/cpg_ss/: Makefile
sim-railbot-pulse/controllers/cpg_ss/Logs/: ss.txt
sim-railbot-pulse/controllers/cpg_ss/Src/: Nao.cpp  Nao.h  cpg_ss.cpp
sim-railbot-pulse/plugins/physics/comfx/: comfx.cpp
sim-railbot-pulse/plugins/physics/comfy/: comfy.cpp
sim-railbot-pulse/plugins/physics/hipfx/: hipfx.cpp
sim-railbot-pulse/plugins/physics/hipfy/: hipfy.cpp
sim-railbot-pulse/protos/: .BallCandy.cache  .Cart.cache  .Distributor.cache  .Key.cache  .KeyHole.cache  .KeyPot.cache  .LollipopCandy.cache  .Nao.cache  .NaoChallengeRoom.cache  .NaoJersey.cache  .NaoLeftWristH21.cache  .NaoLeftWristH25Realistic.cache  .NaoRightWristH21.cache  .NaoRightWristH25Realistic.cache  .NaoRoom.cache  .Shelves.cache  .Tray.cache  .VisualArmature.cache  Cart.proto  Nao-bak.proto  Nao.proto  NaoChallengeRoom.proto  NaoJersey.proto  NaoRoom.proto  VisualArmature.proto
sim-railbot-pulse/worlds/: .compliant.wbproj  .cpg-display.wbproj  .cpg.wbproj  .cpg_ds.wbproj  .cpg_ss.wbproj  .multi-agent.wbproj  .nao_demo.wbproj  .py_world.wbproj  cpg_ds.wbt  cpg_ss.wbt
(+33 files in other folders)
